name:                jitterbug
version:             0.0
synopsis:            a visual metronome to train keeping a steady beat
homepage:            http://dmwit.com/jitterbug
license:             BSD3
license-file:        LICENSE
author:              Daniel Wagner
maintainer:          me@dmwit.com
copyright:           2014 Daniel Wagner
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable jitterbug
  main-is:             jitterbug.hs
  build-depends:       base  >= 4.6  && < 4.7 ,
                       cairo >= 0.12 && < 0.13,
                       gtk3  >= 0.12 && < 0.13,
                       mtl   >= 2.1  && < 2.2 ,
                       time  >= 1.4  && < 1.5
  ghc-options:         -threaded
  default-language:    Haskell2010
